# Ecliptic

./: .gitignore  CLA.md  Pipfile  README.md  pyproject.toml  requirements.txt
ecliptic/: __main__.py  appglobals.py  connectcamera.py  database.py  guiderparameters.py  mainwindow.py  res_rc.py  scheduleentrydialog.py  thread.py  zwosettings.py
ecliptic/astrometry/: astap.py  solver.py
ecliptic/conversions/: time.py
ecliptic/equipment/: ascom.py  equipment.py  zwo.py
ecliptic/formats/: ser3.py
ecliptic/ui/: delegates.py  ui_connectcamera.py  ui_guiderparameters.py  ui_mainwindow.py  ui_scheduleentry.py  ui_zwosettings.py
py3/: __init__.py  appglobals.py  ascom.py  ascomequipment.py  computetargets.py  connectcamera.py  guistyle.py  mainwindow.py  modifylocation.py  res_rc.py  targetswindow.py  ui_connectcamera.py  ui_mainwindow.py  ui_modifylocation.py  ui_zwosettings.py  zwosettings.py
py3/conversions/: coordinates.py
py3/equipment/: ascom.py
py3/ui/: ui_guiderparameters.py  ui_mainwindow.py  ui_modifylocation.py  ui_zwosettings.py
qt/: connectcamera.ui  mainwindow.ui  scheduleentry.ui
qt/frames/: filter_settings.ui  filters.ui  guider.ui  settings.ui
qt5/: connectcamera.ui  guiderparameters.ui  mainwindow.ui  modifylocation.ui  schedulebrain.ui  scheduleentry.ui  targetfilters.ui  targetswindow.ui  zwosettings.ui
solarsystemsequencer/: __main__.py  appglobals.py  computetargets.py  connectcamera.py  guiderparameters.py  mainwindow.py  modifylocation.py  res_rc.py  schedulebrain.py  targetfilters.py  targetswindow.py  thread.py  zwosettings.py
(+46 files in other folders)
