[tool.poetry]
name = "Ecliptic"
version = "0.1.0"
description = "Work-in-progress project for automating the acquisition of planetary images."
authors = ["EthanChappel <EthanChappel@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7, <3.10"
pyside6 = "^6.0.0"
numpy = "^1.18.1"
astropy = "^4.0"
pillow = "^8.1.1"
pythonnet = {version = "^2.4.0", platform = "win32"}
zwoasi = "^0.0.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
